# moli-tutu

./: .gitignore  CHANGELOG.md  Makefile  README.md  UI_MODERNIZATION.md  deepseekUI.html  index.html  kimi2UI.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
.github/workflows/: release.yml
example/: compression.html  r2_setting.html  r2_setting_list.html  upload.html  upload_history.html
landing-page/: index.html  robots.txt  sitemap.xml
landing-page/js/: locales.js  main.js
scripts/: test_upload_api.py
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  lib.rs  main.rs  proxy_server.rs  r2_uploader.rs  types.rs
src/api/: index.ts
src/components/: CompressHistory.tsx  ConfigDialog.tsx  ImageCompressor.tsx  ImageEditor.tsx  LanguageSelector.tsx  MainContent.tsx  Navigation.tsx  Sidebar.tsx  ThemeSelector.tsx  UploadArea.tsx  UploadHistory.tsx  UploadModule.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx
src/contexts/: LanguageContext.tsx
src/hooks/: useCompressState.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/styles/: theme.css
src/types/: compress.ts  index.ts
src/utils/: compressStorage.ts
