[package]
name = "moli-tutu"
version = "0.2.0"
description = "Moli TuTu - Image Hosting Application"
authors = ["gusi"]
edition = "2021"
license = "MIT"
repository = "https://github.com/gusi/MoliTutu"
homepage = "https://github.com/gusi/MoliTutu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moli_tutu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha256 = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
image = "0.24"
mime_guess = "2.0"
thiserror = "1.0"
anyhow = "1.0"
clipboard = "0.5"
arboard = "3.4"

